apps/pocket/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketid-public
  namespace: pocketid
spec:
  ingressClassName: nginx
  rules:
    - host: pocketid.kyledev.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocketid
                port:
                  name: http
